--- a/MMM-AAAGasPrices.css
+++ b/MMM-AAAGasPrices.css
@@ -1,34 +1,36 @@
 .aaa-gas-container {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: flex-start;
 }
 
 .aaa-icon {
-    font-size: 30px;
-    margin-right: 15px;
-    line-height: 1;
+	font-size: 30px;
+	margin-right: 15px;
+	line-height: 1;
 }
 
 .aaa-text-wrapper {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    line-height: 1.1;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	justify-content: center;
+	line-height: 1.1;
 }
 
 .aaa-name {
-    text-transform: uppercase;
-    font-size: 15px;
-    font-weight: 400;
-    letter-spacing: 1px;
-    opacity: 0.7; /* Make it slightly dim like other MM modules */
+	text-transform: uppercase;
+	font-size: 15px;
+	font-weight: 400;
+	letter-spacing: 1px;
+	opacity: 0.7;
+	/* Make it slightly dim like other MM modules */
 }
 
 .aaa-price {
-    font-size: 24px;
-    font-weight: bold;
-    color: #fff; /* Ensure white text */
+	font-size: 24px;
+	font-weight: bold;
+	color: #fff;
+	/* Ensure white text */
 }
